Fix compilation errors for Java 11 compatibility